# news-recommendation

./: .gitignore  Makefile  README.md  evaluate_embeddings.py  plot_gs.py  pyproject.toml  train_embeddings.py  train_recommender.py  utils.py
.github/workflows/: code_check.yml  mypy.yml
conf/: notebook.yaml  sample_data.yaml  train_embeddings.yaml  train_recommender.yaml  train_topic_predictor.yaml
conf/data/: mind_10k.yaml  mind_200k.yaml  mind_large.yaml  mind_small.yaml
conf/experiment/: baseline.yaml  hierec.yaml  n_interest_vectors.yaml  naml_hierec.yaml  naml_multi_interest.yaml  no_user_attention.yaml  nrms_hierec.yaml  nrms_multi_interest.yaml  tanr_hierec.yaml  tanr_multi_interest.yaml  user_encoders.yaml
conf/hydra/: default.yaml
conf/lr_scheduler/: linear_decay_with_warmup.yaml
conf/model/: bert-nrms.yaml  default.yaml  mi-nrms.yaml  miner.yaml  naml.yaml  nrms.yaml  sentence-transformer.yaml  tanr.yaml
conf/model/click_predictor/: hierec.yaml  inner_product.yaml  multi_interest.yaml
conf/model/loss/: interest_disagreement.yaml  prediction.yaml  topic_prediction.yaml
conf/model/news_encoder/: bert.yaml  naml.yaml  nrms.yaml  sentence_transformer.yaml  tanr.yaml
conf/model_overrides/: hierec.yaml  multi_interest.yaml
conf/seed/: alternate_1.yaml  alternate_2.yaml  alternate_3.yaml  alternate_4.yaml  default.yaml
conf/tokenizer/: bert.yaml  nltk.yaml  plm.yaml
datasets/: behaviors.py  topic_reads.py
evaluation/embeddings/: __init__.py  clustering.py
models/: skipgram.py
models/BERT_NRMS/: __init__.py
models/NRMS/: __init__.py  news_encoder.py  user_encoder.py
notebooks/: Data.ipynb  GS.ipynb  Hyperparameters.ipynb  Reading diversity.ipynb  Recommender Results.ipynb  Topic embeddings.ipynb
src/: plot_gs.py  sample_data.py  show_config.py  train_embeddings.py  train_recommender.py  train_topic_predictor.py
src/datasets/: behaviors.py  news.py  recommender_training.py  topic_prediction.py  topic_reads.py
src/evaluation/: metrics.py  utils.py
src/models/: news_recommender.py  skipgram.py  topic_predictor.py
src/utils/: collate.py  context.py  data.py  encode.py  hydra.py  lr_scheduler.py  notebook.py  plots.py  tokenize.py  utils.py
tests/: conftest.py  test_config.py  test_hierec.py
tests/test_metrics/: test_ild.py
tests/test_models/: test_bert_nrms.py  test_miner.py  test_nrms.py  test_tanr.py
utils/: collate.py  data.py  tokenize.py
(+40 files in other folders)
