[tool.poetry]
name = "msc-ai-thesis-code"
version = "0.1.0"
description = ""
authors = ["Koen Gommers <koen@koengommers.nl>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
tqdm = "^4.65.0"
torch = "^1.13.1"
pandas = "^1.5.3"
scikit-learn = "^1.2.2"
typer = {extras = ["all"], version = "^0.7.0"}
nltk = "^3.8.1"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
