[tool.poetry]
name = "msc-ai-thesis-code"
version = "0.1.0"
description = ""
authors = ["Koen Gommers <koen@koengommers.nl>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
requests = "^2.28.2"
tqdm = "^4.65.0"
torch = "^1.13.1"
pandas = "^1.5.3"
scikit-learn = "^1.2.2"
nltk = "^3.8.1"
transformers = "^4.27.3"
jupyter = "^1.0.0"
hydra-core = "^1.3.2"
sentence-transformers = "^2.2.2"
pyarrow = "^12.0.0"
pyrootutils = "^1.0.4"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.2.0"
types-requests = "^2.28.11"
pandas-stubs = "^1.5.3"
types-tqdm = "^4.65.0"
pytest = "^7.3.0"
ruff = "^0.0.262"

[tool.ruff]
line-length = 120
ignore = [
  "E731" # Do not assign a lambda expression, use a def
]

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
